# virtual-library

./: Book.cpp  Book.h  CMakeLists.txt  Library.cpp  Library.h  application.cpp  application.h  libary.cpp  libary.h  main.cpp  makefile.txt  readme.md  user.cpp  user.h
include/: Application.h  Book.h  Library.h  User.h  application.h  sqlite3.h  user.h
src/: Book.cpp  Library.cpp  application.cpp  book.cpp  library.cpp  main.cpp  user.cpp
